[package]
name = "reth-pq-node"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Post-quantum Ethereum node — PqNode type and component builders"

[lints]
workspace = true

[dependencies]
# PQ crates
reth-pq-primitives      = { workspace = true }
reth-pq-node-primitives = { workspace = true }
reth-pq-evm             = { workspace = true }
reth-pq-pool            = { workspace = true }
reth-pq-poa             = { workspace = true }

# reth
reth-basic-payload-builder      = { workspace = true }
reth-chainspec                  = { workspace = true }
reth-engine-local               = { workspace = true }
reth-engine-primitives          = { workspace = true }
reth-errors                     = { workspace = true }
reth-ethereum-consensus         = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-ethereum-forks             = { workspace = true }
reth-ethereum-payload-builder   = { workspace = true }
reth-evm                        = { workspace = true }
reth-network                    = { workspace = true }
reth-node-api                   = { workspace = true }
reth-node-builder               = { workspace = true }
reth-payload-builder-primitives = { workspace = true }
reth-payload-primitives         = { workspace = true }
reth-primitives-traits          = { workspace = true }
reth-provider                   = { workspace = true }
reth-revm                       = { workspace = true }
reth-rpc                        = { workspace = true }
reth-rpc-convert                = { workspace = true, features = ["pq"] }
reth-rpc-eth-api                = { workspace = true }
reth-rpc-eth-types              = { workspace = true }
reth-storage-api                = { workspace = true }
reth-transaction-pool           = { workspace = true }

# alloy
alloy-consensus          = { workspace = true }
alloy-eips               = { workspace = true }
alloy-network            = { workspace = true }
alloy-primitives         = { workspace = true }
alloy-rpc-types-engine   = { workspace = true }
alloy-rpc-types-eth      = { workspace = true }

# revm
revm                     = { workspace = true }

# misc
eyre                     = { workspace = true }
tracing                  = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = []
