[package]
name = "reth-pq-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Post-quantum cryptographic primitives for the pq-reth Ethereum client"

[lints]
workspace = true

[dependencies]
# Post-quantum signatures (ML-DSA / CRYSTALS-Dilithium — NIST FIPS 204)
dilithium = { workspace = true }

# Alloy types — Address, B256, Bytes, etc.
alloy-primitives = { workspace = true, features = ["std", "serde"] }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }

# RLP encoding/decoding
alloy-rlp = { workspace = true }

# reth traits
reth-primitives-traits = { workspace = true, features = ["serde-bincode-compat"] }
reth-codecs = { workspace = true }
reth-db-api = { workspace = true }

# Serialisation
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

# Hashing for transaction hash
sha3 = { version = "0.11", default-features = false }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-evm/std",
    "serde/std",
    "bytes/std",
    "thiserror/std",
]
